...
                  Align(
                    alignment: Alignment.centerLeft,
                    child: Text("Comment types:",
                        style: Theme.of(context).textTheme.labelLarge),
                  ),
                  CheckboxListTile(
                      title: const Text("Positives"),
                      value:
                          controller.currentFilterOptions.value.showPositives,
                      selected:
                          controller.currentFilterOptions.value.showPositives ??
                              false,
                      onChanged: (val) {
...
                      ),
                      ElevatedButton(
                        onPressed: () {
                          Navigation.goBack();
                          controller.reloadComments();
                        },
                        child: const Text("Search"),
                      ),
                    ],
                  ),
                  const SizedBox(height: 16),
                ],
              ),
...
                    if (controller.commentsDisabledForVideo.value) {
                      return Expanded(
                          child: Center(
                        child: Padding(
                          padding: const EdgeInsets.all(8.0),
                          child: Text(
                            "Comments disabled for this video :(",
                            style: textTheme.headlineSmall,
                            textAlign: TextAlign.center,
                          ),
                        ),
                      ));
                    }
...
                    if (controller.commentsThreadList.isEmpty) {
                      return Expanded(
                          child: Center(
                        child: Padding(
                          padding: const EdgeInsets.all(8.0),
                          child: Text(
                            "No comments yet :/",
                            style: textTheme.headlineSmall,
                            textAlign: TextAlign.center,
                          ),
                        ),
                      ));
                    }
...
